Fixing paginator alignment issue.

--- a/src/modules/common/components/paginator/paginator.styles.less
+++ b/src/modules/common/components/paginator/paginator.styles.less
@@ -33,18 +33,12 @@
   text-decoration: none;
 }
 
-.Paginator_back .Paginator__button {
-  align-items: center;
-  display: flex;
-  justify-content: flex-start;
+.Paginator__back > .Paginator__button {
+  justify-content: flex-end;
   padding-left: 1.25rem;
-  text-align: left;
 }
 
-.Paginator_forward .Paginator__button {
-  align-items: center;
-  display: flex;
-  justify-content: flex-end;
+.Paginator__forward > .Paginator__button {
+  justify-content: flex-start;
   padding-right: 1.25rem;
-  text-align: right;
 }
